feat: WIP create card component

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,5 @@
 {
   "hello": "Hello, %{name}!",
-  "hello_stranger": "Hey, what's your name?"
+  "hello_stranger": "Hey, what's your name?",
+  "wallet_balance": "Balance in your wallet"
 }
