feat: create header title and back button

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,5 +3,7 @@
   "hello_stranger": "Hey, what's your name?",
   "wallet_balance": "Balance in your wallet",
   "income": "Incomes",
-  "expense": "Expenses"
+  "expense": "Expenses",
+  "back": "back",
+  "settings": "settings"
 }
