--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,5 +5,6 @@
   "income": "Incomes",
   "expense": "Expenses",
   "back": "back",
-  "settings": "settings"
+  "settings": "settings",
+  "profile": "profile"
 }
