--- a/src/translations/pt-br.json
+++ b/src/translations/pt-br.json
@@ -5,5 +5,6 @@
   "income": "Entradas",
   "expense": "Saídas",
   "back": "voltar",
-  "settings": "configurações"
+  "settings": "configurações",
+  "profile": "perfil"
 }
